  [Michele Simionato]
  * Refactored the serialization of CompositionInfo instances to HDF5
  * Used exponential notation with 5 decimal digits in most exported XML files
  * Refactored the sampling mechanics in the event based calculators
  * The event_based_risk calculator infers the minimum intensity of the GMFs
    from the vulnerability functions (if not specified in the job.ini)
  * Fixed the `avg_losses-stats`: they were not generated in absence of
    loss curves
  * Added a command `oq-lite info --exports`
  * Added filtering on the mininum intensity also in the event based
    hazard calculator and improved the performance and memory occupation
  * Added a view displaying the calculation times by source typology
  * Fixed the test of GMPETable after the correction in hazardlib
  * Optimized the saving of the asset loss table
  * Fixed a bug with indices over the minimum IML when computing the loss
    ratios
  * Optimized the case of multiple assets of the same taxonomy on the
    same point and introduced a datastore view `assets_by_site`
  * Fixed HDF5 segmentation faults in the tests for Ubuntu 16.04

  [Daniele Viganò]
  * Added support for Ubuntu 16.04 (xenial) packages

  [Michele Simionato]
  * Optimized the case when the epsilons are not required, i.e. all the
    covariance coefficients are zero in the vulnerability functions
  * Added another test for event based risk (`case_miriam`)
  * Revisited the distribution mechanism and refined the weight of the
    ruptures in the event based calculators to avoid generating slow tasks
  * Added an automatic help for the subcommands of oq-lite and managed
    --version correctly
  * The event based risk calculator now use different seeds for different
    realizations; also, the performance has been substantially improved
  * Improved the .rst reports with data transfer information

  [Matteo Nastasi]
  * Backport of libhdf5 and h5py for ubuntu 'precise' serie

  [Michele Simionato]