@@ -314,17 +314,18 @@ class EventBasedRiskCalculator(base.RiskCalculator):
         else:
             logging.info('minimum_intensity=%s', oq.minimum_intensity)
 
-        riskinputs = self.riskmodel.build_inputs_from_ruptures(
-            self.sitecol.complete, all_ruptures, oq.truncation_level,
-            correl_model, min_iml, eps, oq.concurrent_tasks or 1)
-        # NB: I am using generators so that the tasks are submitted one at
-        # the time, without keeping all of the arguments in memory
-        return starmap(
-            self.core_task.__func__,
-            ((riskinput, self.riskmodel, self.rlzs_assoc,
-              self.assetcol, self.monitor.new('task'))
-             for riskinput in riskinputs)).reduce(
-                     agg=self.agg, posthook=self.save_data_transfer)
+        with self.monitor('building riskinputs', autoflush=True):
+            riskinputs = self.riskmodel.build_inputs_from_ruptures(
+                self.sitecol.complete, all_ruptures, oq.truncation_level,
+                correl_model, min_iml, eps, oq.concurrent_tasks or 1)
+            # NB: I am using generators so that the tasks are submitted one at
+            # the time, without keeping all of the arguments in memory
+            return starmap(
+                self.core_task.__func__,
+                ((riskinput, self.riskmodel, self.rlzs_assoc,
+                  self.assetcol, self.monitor.new('task'))
+                 for riskinput in riskinputs)).reduce(
+                         agg=self.agg, posthook=self.save_data_transfer)
 
     def agg(self, acc, result):
         """
