@@ -1,4 +1,5 @@
   [Michele Simionato]
+  * Fixed the number of tasks generated by the risk calculators
   * Refactored the serialization of CompositionInfo instances to HDF5
   * Used exponential notation with 5 decimal digits in most exported XML files
   * Refactored the sampling mechanics in the event based calculators
